Wed Sep 17 16:22:58 2014  Eric Wong  <e@80x24.org>

	* ext/zlib/zlib.c (zlib_mem_alloc): check overflow

Wed Sep 17 11:33:35 2014  Laurent Arnoud  <laurent@spkdev.net>

	* test/fiddle/test_import.rb (Fiddle::TestImport#test_sizeof):
	  added test for long long [fix GH-716]

Wed Sep 17 11:09:21 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/rbinstall.rb: fixed invalid options with latest rubygems.
	  https://github.com/rubygems/rubygems/issues/1013

Tue Sep 16 19:19:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* benchmark/bm_app_aobench.rb: update outdated links to the
	  original program.  [ruby-dev:48550] [Feature #10247]

Tue Sep 16 01:06:40 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* reg*.c: Merge Onigmo 5.15.0 38a870960aa7370051a3544

Mon Sep 15 16:21:10 2014  Eric Wong  <e@80x24.org>

	* io.c (struct io_advise_struct): 32 => 24 bytes on 64-bit
	* io.c (struct io_internal_writev_struct): 24 => 16 bytes on 64-bit
	* process.c (struct waitpid_arg): ditto

Mon Sep 15 10:29:25 2014  Natalie Weizenbaum  <nweiz@google.com>

	* ext/pathname/lib/pathname.rb (SAME_PATHS):
	  Pathname#relative_path_from uses String#casecmp to compare strings
	  on case-insensitive filesystem platforms (e.g., Windows). This can
	  return nil for strings with different encodings, and the code
	  previously assumed that it always returned a Fixnum.  [Fix GH-713]

Mon Sep 15 09:43:18 2014  Sho Hashimoto  <sho.hsmt@gmail.com>

	* ext/fiddle/lib/fiddle/import.rb (Fiddle::Importer#sizeof): fix typo,
	  SIZEOF_LONG_LON.  [Fix GH-714]

Mon Sep 15 08:13:40 2014  Matthew Draper  <matthew@trebex.net>

	* sprintf.c (rb_str_format): rational 'f' format works for more
	  values.  [fix GH-717]

Sun Sep 14 16:57:27 2014  Eric Wong  <e@80x24.org>

	* template/vm.inc.tmpl: "insns.c" => "insns.def"
	* tool/instruction.rb: typo fix

Sun Sep 14 12:29:52 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_tracer.rb: fixed testcase for rubygems update.
